[tool.poetry]
name = "dtfeatures"
version = "0.1.0"
description = "DTFeatures: A Python library designed to simplify the extraction of meaningful features from datetime objects, 
               enabling efficient analysis and modeling of time-related data in data science and machine learning applications."
authors = ["Amin Ahangaran <aminahangaran@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "2.2.2"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
